--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,44 @@
+/* Base Styles (Mobile-First) */
+
 * {
     font-family: "Inter", sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
 }
 
 body {
     display: flex;
     flex-direction: column;
-}
-
-main {
-    flex: 1;
-    padding: 20px;
-}
-
-html,
-body {
-    height: 100%;
-    margin: 0;
-}
-
-body,
-h1,
-h2,
-p {
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* don't thnk this is being used
-h1 {
-    font-size: 28.8px;
-   color: #ffffff;
-}
-*/
-
-container h2 a {
-    text-decoration: none;
-    color: inherit;
-}
-
-body {
     font-family: "Inter", sans-serif;
     background-color: rgb(255, 255, 255);
     color: #000000;
     padding-top: 102px;
+}
+
+#hello {
+    padding-top: 0.8rem;
+    padding-left: 0.9rem;
+}
+
+main h1, h2 {
+    color: #ff0077;
+    text-decoration: none;
+}
+
+main {
+    flex: 1;
+    width: 90%;
+    margin: 0 auto;
+}
+
+main p {
+    padding-bottom: 2rem;
 }
 
 header {
@@ -53,8 +49,7 @@ header {
     background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
     color: #ffffff;
     padding: 10px 0;
-    box-shadow: #ff0077 (89, 39, 229, .5);
-
+    box-shadow: 0 4px 6px rgba(255, 0, 119, 0.4);
 }
 
 .logo-round {
@@ -63,50 +58,29 @@ header {
     border-radius: 50%;
     z-index: 2000;
     display: block;
+    box-shadow: 0 4px 6px rgba(255, 0, 119, 0.4);
 }
-
-/*
-#logo-text h1 {
-    font-size: 2em !important;
-}
-*/
 
 header .container {
     display: flex;
     justify-content: space-between;
 }
 
-/*
-header h1 {
-    text-align: center;
-    color: #ffffff;
-}
-*/
 header a {
     text-decoration: none;
     color: #ffffff;
 }
 
-#header-nav {
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
-/* Don't think this is in use?
-.menu-icon {
-    justify-content: flex-end;
-}
-    */
-
 nav ul {
     list-style-type: none;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 0;
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin: 5px 0;
     position: relative;
 }
 
@@ -117,33 +91,18 @@ nav ul li a {
     font-weight: bold;
 }
 
-nav ul li a:hover {
-    font-weight: bold;
+nav ul li a:hover, nav ul li a.active {
     color: #ffd900;
     transform: scale(1.05);
-}
-
-/* Style for the active page menu item */
-nav ul li a.active {
-    text-decoration: underline;
-    font-weight: bold;
-    color: #ffd900;
-}
-
-/* Dropdown Menu */
-.dropdown {
-    position: bottom;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    font-size: 2rem;
     background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(255, 0, 119 0.2);
+    box-shadow: 0px 8px 16px 0px rgba(255, 0, 119, 0.2);
     z-index: 1;
-    align-items: end;
 }
 
 .dropdown-content a {
@@ -164,46 +123,27 @@ nav ul li a.active {
     transform: scale(1.05);
 }
 
-/* Style for the signup button */
-.btn-signup {
-    background-color: #ff0077;
-    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
-    color: #ffffff;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    border: 2px solid #ffffff;
-    box-shadow: 0 0 25px var(--main-color);
+/* Homepage Main styles */
+#home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 
-.btn-signup:hover {
-    background-color: #ffd900;
-    transform: scale(1.05);
-    color: #F9F9F9;
-    box-shadow: 0 0 25px var(#ffd900), 0 0 50px var(#ff0077);
+#home .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
 }
 
-
-/* Main Content Styles*/
-
-main {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px 0;
+#myphoto{
+    padding-bottom: 2rem;
 }
 
-/*section {
-    margin-bottom: 20px;
-}*/
-
-h2 {
-    color: #ff0077;
-}
-
-/* Home Page */
 #circle-cover-bg {
-    background: url("../images/mtb-laura.png") no-repeat top center / cover;
+    background: url("../images/mtb-laura.png") no-repeat center / cover;
     height: 90vw;
     width: 90vw;
     border-radius: 50%;
@@ -211,123 +151,19 @@ h2 {
     max-height: 300px;
 }
 
-#home .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-}
-
-#myphoto {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-}
-
-.int-link {
-    text-decoration: none;
-}
-
-/* Blog specific styles */
-.blog-post {
-    margin-bottom: 40px;
-}
-
 .blog-content {
     display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 30px;
-    flex: 1;
-}
-
-.blog-content.reverse {
-    flex-direction: row-reverse;
-}
-
-.blog-content .text {
-    flex: 1;
-}
-
-.blog-content .image {
-    flex: 1;
 }
 
 .blog-content .image img {
     width: 95%;
     border-radius: 8px;
-    max height: 80px;
+    max-height: 80px;
 }
 
-.blog-content ol,
-.blog-content ul,
-.blog-content.reverse ol,
-.blog-content.reverse ul {
-    padding-left: 1em;
-    margin-left: 0em;
-    line-height: 1.4;
-}
-
-.next-prev-blog {
-    display: flex;
-    justify-content: space-evenly;
-    width: 100%;
-}
-
-/*
-.next-blog {
-    width: 25%;
-    align-items: flex-start;
-    text-align: right;
-}
-
-.right-arrow {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    height: 200px;
-    background-color: #000000;
-    clip-path: polygon(0% 20%,60% 20% 60% 0%, 100% 50%, 50% 100%,60% 80%, 0% 80%);
-}
-
-.next-blog {
-    position: relative;
-    text-align: center;
-    margin-top: 50px;
-}
-
-.right-arrow {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100px;
-    height: 100px;
-    background-color: #000000;
-    clip-path: polygon(0% 35%, 70% 35%, 70% 0%, 100% 50%, 70% 100%, 70% 65%, 0% 65%);
-}
-*/
-
-container next-prev-blog .container .next-prev-blog {
-    width: 100dvw;
-    height: 2rem;
-    width: 2rem;
-    border-top: 8px solid #202020;
-    border-left: 8px solid #202020;
-    transform: rotate(45deg);
-    left: 27.5px;
-    top: 35px;
-}
-
-.prev-blog {
-    width: 25%;
-    align-items: flex-end;
-    text-align: left;
-}
-
-/* Contact Form Styles */
 .contact-form {
     max-width: 600px;
     margin: 0 auto;
@@ -344,8 +180,7 @@ container next-prev-blog .container .next-prev-blog {
     color: #000000;
 }
 
-.contact-form input,
-.contact-form textarea {
+.contact-form input, .contact-form textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -370,36 +205,43 @@ container next-prev-blog .container .next-prev-blog {
 }
 
 .container {
-    width: 80%;
+    width: 100%;
+    padding: 0 15px;
     margin: 0 auto;
 }
 
-.amazon:hover {
-    font-weight: bold;
-}
-
-/* Footer Styles */
 footer {
     background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
     padding: 20px 0;
-    box-shadow: #000000;
-    color: #F9F9F9
-    /* This doesn't have an effect because of other things*/
-    text-align: center;
-}
-
-footer .amazon {
     color: #F9F9F9;
+    text-align: center;
 }
 
 .footer-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
     gap: 20px;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 15px;
+}
+
+.btn-signup {
+    background-color: #ff0077;
+    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
+    color: #ffffff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    border: 2px solid #ffffff;
+    box-shadow: 0 0 25px var(--main-color);
+}
+
+.btn-signup:hover {
+    background-color: #ffd900;
+    transform: scale(1.05);
+    color: #F9F9F9;
+    box-shadow: 0 0 25px var(#ffd900), 0 0 50px var(#ff0077);
 }
 
 .footer-top {
@@ -408,27 +250,15 @@ footer .amazon {
 
 .footer-bottom {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr;
     gap: 20px;
-    align-items: center;
-    color: #F9F9F9;
-}
-
-.footer-left,
-.footer-center,
-.footer-right {
     text-align: center;
-}
-
-.footer-right {
-    text-align: right;
 }
 
 .footer-right ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    align-items: center;
 }
 
 .footer-right li {
@@ -447,114 +277,57 @@ footer .amazon {
 
 #socials {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     list-style-type: none;
     color: #ffffff;
 }
 
-/* Responsive design for mobile */
-@media (max-width: 768px) {
-    .footer-container {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto auto auto auto;
-        padding-top: 102px;
+/* Tablet Screens */
+@media (min-width: 768px) {
+    nav ul {
+        flex-direction: row;
     }
 
-    .footer-top {
-        grid-row: 1;
-        text-align: center;
-    }
+    #home {
+        flex-direction: row;
+        justify-content: center;
+    }    
 
     .footer-bottom {
-        grid-row: 2;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto auto auto;
-        gap: 10px;
-        text-align: center;
-    }
-
-    .footer-left {
-        grid-row: 1;
-    }
-
-    .footer-center {
-        grid-row: 3;
+        grid-template-columns: 1fr 2fr 1fr;
     }
 
     .footer-right {
-        grid-row: 2;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .footer {
-        display: grid;
-        grid-template-rows: auto auto auto auto;
-        gap: 16px;
-    }
-
-    .footer-right ul {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-    }
-
-    .footer-right li {
-        margin-bottom: 10px;
-    }
-
-    .blog-content {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .blog-content.reverse {
-        flex-direction: column;
-    }
-
-    p.center {
-        text-align: center;
-    }
-
-    /* Target ordered and unordered lists within blog-content and blog-content.reverse */
-    .blog-content ol,
-    .blog-content ul,
-    .blog-content.reverse ol,
-    .blog-content.reverse ul {
-        padding-left: 1em;
-        margin-left: 0em;
-        font-size: 0.9em;
-        line-height: 1.4;
-    }
-
-    /* Customize ordered list numbers */
-    .blog-content ol,
-    .blog-content.reverse ol {
-        list-style-type: decimal;
+        text-align: right;
     }
 }
 
-/*need to add something.*
-/* Media Query for small mobiles*/
-@media (max-width: 480px) {
-
-    nav ul li {
-        margin: 5px 0;
+/* Desktop Screens */
+@media (min-width: 1024px) {
+    main {
+        width: 80%;
     }
 
-    .footer-top a {
-        padding: 10px 20px;
-        display: inline-block;
+    #home {
+        flex-direction: row;
+        justify-content: center;
     }
 
-    .footer li {
-        margin: 16px 0;
+    #home .container {
+        text-align: left;
+        justify-content: center;
     }
 
-    .footer li+li {
-        margin-top: 0;
+    .blog-content {
+        flex-direction: row;
+    }
+
+    .blog-content.reverse {
+        flex-direction: row-reverse;
+    }
+
+    .footer-right ul {
+        display: flex;
+        justify-content: space-between;
     }
 }
